// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components CounterValue basic 1`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 grmBGS"
  color="#66be54"
>
  + USD 10.00
</div>
`;

exports[`components CounterValue specifying ticker different from default 1`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 grmBGS"
  color="#66be54"
>
  + USD 5.00
</div>
`;

exports[`components CounterValue using countervalue different from default 1`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 bPBcmj"
  color={undefined}
>
  + EUR 0.42
</div>
`;

exports[`components CounterValue with time travel whith date in countervalues 1`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 grmBGS"
  color="#66be54"
>
  + USD 20.00
</div>
`;

exports[`components CounterValue with time travel whith date not in countervalues 1`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 grmBGS"
  color="#66be54"
>
  + USD 0.00
</div>
`;

exports[`components CounterValue without countervalues populated 1`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 grmBGS"
  color="#66be54"
>
  + USD 0.00
</div>
`;
